# fastapi-app

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/api/: __init__.py  deps.py
app/api/api_v1/: routers.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  item.py  user.py
app/db/: __init__.py  base.py  base_class.py
app/models/: __init__.py  item.py  user.py
app/schemas/: __init__.py  item.py  token.py  user.py
app/services/: __init__.py  response.py
