[tool.poetry]
name = "fast_api_app"
version = "0.1.0"
description = ""
authors = ["Jimmy <7905351@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
starlette = "^0.13.8"
SQLAlchemy = "^1.3.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
